Fix usage of cache.

Patch by Dave Vasilevsky.

BUG: 248622